# text-to-UML

./: .env.example  .gitignore  README.md  pyproject.toml  start.sh
backend/: __init__.py  api.py  main.py
backend/pipeline/: __init__.py
backend/pipeline/steps/: __init__.py  constrain.py  generate.py  refine.py  route.py  validate.py
backend/pipeline/workflows/: __init__.py  default.py  fast.py
backend/prompts/: __init__.py  generate.txt  router.txt  style_guide.txt
backend/prompts/grammars/: ml.json  swe.json
backend/prompts/style_guides/: general.txt  ml.txt  swe.txt
backend/utils/: __init__.py  env.py  llm.py  orchestrator.py  pipeline.py  providers.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue
src/text_to_uml/: __init__.py  api.py  main.py
src/text_to_uml/prompts/: __init__.py  refiner.txt  repair.txt
src/text_to_uml/utils/: __init__.py  data_models.py  env.py  pipeline.py
