[project]
name = "text-to-uml"
version = "0.1.0"
description = "Convert natural language to valid Mermaid.js UML diagrams"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]

[project.scripts]
text-to-uml = "backend.main:main"
text-to-uml-api = "backend.api:serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
